# SB-Wrapper

./: .gitignore  README.md  config.yaml  conftest.py  environment.yml  pyproject.toml  test_SBAccess.py  test_capture_scripts.py  test_celfdrive_api.py  test_celfdrive_utils.py  test_microscope_service.py  test_montage_api.py  test_montage_utils.py  test_objective_manager.py  test_parfocality.py  test_pointfinder.py  test_refresh.py  test_routeoptimiser.py  test_webapp_factory.py
examples/: test_sb_access.py
src/: CMetadataLib.py  SBAccess.py  SBDetectObjects.py  SBMontageUtils.py  SBPointFinder.py  SBPointOptimiser.py  __init__.py  __main__.py  api.py  celfdrive.py  configuration.py  microscope_client.py  objective_manager.py  predict.py  test_SBAccess.py  webapp.py
src/interfaces/web/: __init__.py  api_router.py  app.py  static_ui.py
src/sbwrapper/: __init__.py  _base_loader.py  base_decoder.py  byte_util.py  c_metadata_lib.py  cli.py  client.py  connection.py  csb_point.py  sb_access.py
src/services/: celfdrive_workflow.py  microscope.py
tests/: test_client_points.py  test_connection.py  test_package_imports.py
